# pinn-heat-equation

./: .gitignore  CMakeLists.txt  PhasmExampleHeatEquation.ipynb  README.md  pinn_diffusion_pde_solver.cpp  prof.slurm
data/: roofline_scatter.csv  time_distribution.csv
docs/: prof_res.md
metrics-prof/10-run/: bytes_cache.csv
metrics-prof/1run/: bytes_pci.csv  flops_tensor.csv  time.csv
metrics-prof/1run-alt/: flops_f32.csv  flops_f64.csv
metrics-prof/4run/: bytes_cache.csv  flops_f64.csv
metrics-prof/5run/: flops_f16.csv
metrics-prof/Tesla-T4/10-run/: bytes_hbm.csv  flops_tensor.csv
metrics-prof/Tesla-T4/1run/: bytes_hbm.csv  flops_f16.csv
metrics-prof/Tesla-T4/1run-alt/: bytes_cache.csv  bytes_pci.csv  flops_f16.csv  time.csv
metrics-prof/Tesla-T4/2run/: flops_f64.csv
metrics-prof/Tesla-T4/4run/: bytes_hbm.csv  bytes_pci.csv
metrics-prof/Tesla-T4/5run/: bytes_hbm.csv  flops_f32.csv  flops_f64.csv  flops_tensor.csv
prof-csv-res/Ampere-A100/: bytes_pci.csv  flops_f64.csv  flops_tensor.csv  time.csv
prof-csv-res/Ampere-A100/1run/: bytes_cache.csv  bytes_hbm.csv  bytes_pci.csv  flops_f16.csv  flops_f32.csv  flops_f64.csv  flops_tensor.csv  time.csv
prof-csv-res/Tesla-T4/1run/: bytes_cache.csv  flops_f32.csv  flops_f64.csv
prof-csv-res/Tesla-T4/1run-alt/: bytes_hbm.csv  flops_tensor.csv
prof-csv-res/Tesla-T4/2run/: bytes_cache.csv  bytes_hbm.csv  bytes_pci.csv  flops_f16.csv  flops_f32.csv  flops_tensor.csv  time.csv
prof-csv-res/Tesla-T4/4run/: flops_f16.csv  flops_f32.csv  (+2 more)
scripts/: plot_data.py  prof.slurm
src/: CMakeLists.txt
(+3 files in other folders)
